Add support for ignoreState, connect_to to pillar, vertical

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -19,10 +19,10 @@ license="Apache Public License v2"
     mandatory=true #mandatory
     versionRange="[40,)" #mandatory
     ordering="NONE"
-    side="BOTH"
+    side="CLIENT"
 [[dependencies.westerosctm]] #optional
     modId="ctm" #mandatory
     mandatory=true #mandatory
     versionRange="[1.18.2,)" #mandatory
     ordering="NONE"
-    side="BOTH"
+    side="CLIENT"
